ArrayList does not provide a getFirst() method. Replace it with result.get(0) to retrieve the first element.
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>